--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "cookie": "^0.6.0"
+    "cookie": "^1.0.2",
+    "xid-js": "^1.0.1"
   }
 }
