--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "wrangler dev"
+    "dev": "wrangler dev",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest"
   },
   "dependencies": {
-    "cookie": "^1.0.2"
+    "cookie": "^1.0.2",
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^30.1.1",
     "wrangler": "^4.32.0"
   }
 }
